// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OAuth2Session /> > renders a finished session 1`] = `
<div
  className="_block_17898c _session_634806"
>
  <svg
    aria-label="Computer"
    className="_icon_e677aa"
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 18c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 2 16V5c0-.55.196-1.02.587-1.413A1.926 1.926 0 0 1 4 3h16c.55 0 1.02.196 1.413.587.39.393.587.863.587 1.413v11c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 20 18H4Zm0-2h16V5H4v11Zm-2 5a.967.967 0 0 1-.712-.288A.968.968 0 0 1 1 20c0-.283.096-.52.288-.712A.967.967 0 0 1 2 19h20c.283 0 .52.096.712.288.192.191.288.429.288.712s-.096.52-.288.712A.968.968 0 0 1 22 21H2Z"
    />
  </svg>
  <div
    className="_container_634806"
  >
    <h6
      className="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64 _sessionName_634806"
      title="session-id"
    >
      <a
        href="/sessions/session-id"
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={{}}
      >
        abcd1234
      </a>
    </h6>
    <p
      className="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _sessionMetadata_634806"
    >
      Signed in 
      <time
        dateTime="2023-06-29T03:35:17Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _sessionMetadata_634806"
      data-finished={true}
    >
      Finished 
      <time
        dateTime="2023-06-29T03:35:19Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _sessionMetadata_634806"
    >
      1.2.3.4
    </p>
    <p
      className="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _sessionMetadata_634806"
    >
       
      <span
        className="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _sessionMetadata_634806"
      >
        Element
      </span>
    </p>
  </div>
</div>
`;

exports[`<OAuth2Session /> > renders an active session 1`] = `null`;

exports[`<OAuth2Session /> > renders correct icon for a native session 1`] = `
<div
  className="_block_17898c _session_634806"
>
  <svg
    aria-label="Mobile"
    className="_icon_e677aa"
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 23c-.55 0-1.02-.196-1.412-.587A1.926 1.926 0 0 1 5 21V3c0-.55.196-1.02.588-1.413A1.926 1.926 0 0 1 7 1h10c.55 0 1.02.196 1.413.587.39.393.587.863.587 1.413v18c0 .55-.196 1.02-.587 1.413A1.926 1.926 0 0 1 17 23H7Zm0-5h10V6H7v12Z"
    />
  </svg>
  <div
    className="_container_634806"
  >
    <h6
      className="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64 _sessionName_634806"
      title="session-id"
    >
      <a
        href="/sessions/session-id"
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        style={{}}
      >
        abcd1234
      </a>
    </h6>
    <p
      className="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _sessionMetadata_634806"
    >
      Signed in 
      <time
        dateTime="2023-06-29T03:35:17Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _sessionMetadata_634806"
      data-finished={true}
    >
      Finished 
      <time
        dateTime="2023-06-29T03:35:19Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _sessionMetadata_634806"
    >
      1.2.3.4
    </p>
    <p
      className="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _sessionMetadata_634806"
    >
       
      <span
        className="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _sessionMetadata_634806"
      >
        Element
      </span>
    </p>
  </div>
</div>
`;
